--- a/src/resources/admin/css/product.css
+++ b/src/resources/admin/css/product.css
@@ -11,7 +11,7 @@
     box-shadow: 0 0 20px rgba(170, 170, 170, 0.2);
 }
 
-img {
+#img-preview {
     width: 100%;
     object-fit: cover;
     margin-bottom: 20px;
