--- a/src/resources/client/css/home.css
+++ b/src/resources/client/css/home.css
@@ -2,7 +2,7 @@
     font-size: 18px !important;
 }
 
-.fa-star, .fa-star-half-alt{
+.productname .fa-star, .productname .fa-star-half-alt{
     color: #F5A623 !important;
 }
 .none {
