--- a/src/resources/client/css/home.css
+++ b/src/resources/client/css/home.css
@@ -2,10 +2,10 @@
     font-size: 18px !important;
 }
 
-.productname .fa-star, .productname .fa-star-half-alt{
+.start-container .fa-star, .start-container .fa-star-half-alt{
     color: #F5A623 !important;
 }
-.none {
+.start-container .none {
     color: #b1b1b1 !important;
 }
 .button_group {
